[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.26.2"
egui_extras = "0.26.2"
serde = "1.0.197"
