[package]
name = "task-manager"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.80", features = ["backtrace"]}
chrono = "0.4.35"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
egui = "0.26.2"
egui_extras = "0.26.2"
rfd = "0.14.0"
serde = "1.0.197"
winapi = { version = "0.3.9", features = ["psapi", "processthreadsapi"] }


[dependencies.windows]
version = "0.54.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Foundation_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_Time",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory"
]
